# parallel-python-lab

./: LICENSE  README.md  pyproject.toml  workshop.md
agenda/: agenda.md
docs/marp/: asyncio_i.md  asyncio_ii.md  food_sync.md  free_threaded_python.md  io_async.md  loop_thread_fig.md  opencl.md  session_1.md
docs/marp/fig/: workgroup.md
docs/marp/html/: asyncio_i.html  asyncio_ii.html  free_threaded_python.html  opencl.html  session_1.html
docs/tasks/: session_1.md  session_2.md
examples/async_demo/: io_cpu_bound.py  sleep_job.py
examples/food_sync/: food_sync.py
examples/free_threads/: async_in_threads.py  sub_interpreter.py
examples/opencl_demo/: basics.py  image.py  memory.py
examples/solutions/async_1/: food_gather.py
examples/solutions/async_2/: food_taskgroup.py
examples/solutions/complex_foodtruck/: food_system.py
examples/solutions/game_of_life/: game_of_life.py
slides/: slides.md
src/examples/ex00/: ex00.py  food_sync.md  food_sync.py
src/examples/ex01/: README.md  ex01.py  ex01_food.py  ex01_foodtruck.py  ex01_viz.py
src/examples/ex02/: ex02_kernel.py
src/examples/ex_multiple/: README.md  ex_multi_food.py  food_gather.py  food_taskgroup.py
src/examples/ex_signaling/: food_signals.py
src/examples/food_async/: README.md  asyncio_i.md  asyncio_ii.md  food_gather.py  food_socket.py  food_taskgroup.py
src/examples/food_sync/: README.md  food_sync.md  food_sync.py  foundations.md
src/examples/free_threads/: async_in_threads.py  free_taskgroup.py
src/examples/game_of_life/: game_of_life.py  gol.py
src/examples/lecture/: cpu_bound.py  ft_job.py  io_cpu_bound.py  sleep_job.py
src/examples/sleep_job/: my_job.py  sleep_job.py
src/marp/: agenda.md  asyncio_i.md  asyncio_ii.md  execution_ex.md  free_threaded_python.md  gil.md  io_async.md  paralellism.md  pub_sub.md  web_requests.md
src/utils/: console_viz.py
