[project]
name = "parallel-python-lab-workshop"
version = "0.1.0"
description = "Concurrency-first simulation factory: async orchestration, CPU parallelism, GPU execution."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
  { name = "Julius Parulek" }
]

dependencies = [
  "numpy>=1.26",
]

# ---------------------------------------------------------------------------
# Dependency groups (uv install --group ...)
# ---------------------------------------------------------------------------

[dependency-groups]

cli = [
  "rich>=13.7",
  "tqdm>=4.66",
  "click>=8.1",
]

numba = [
  "numba>=0.59",
]

opencl = [
  "pyopencl>=2024.3",
]

viz = [
  "matplotlib>=3.8",
]

dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.8",
]

all = [
  "rich>=13.7",
  "tqdm>=4.66",
  "click>=8.1",
  "numba>=0.59",
  "pyopencl>=2024.3",
  "matplotlib>=3.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
