[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parallel-python-lab-workshop"
version = "0.1.0"
description = "Concurrency-first simulation factory: async orchestration, CPU parallelism, GPU execution."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
  { name = "Julius Parulek" }
]

dependencies = [
  "numpy>=1.26",
]

[dependency-groups]
cli = [
  "rich>=13.7",
  "tqdm>=4.66",
  "click>=8.1",
]

opencl = [
  "pyopencl>=2026.1",
]

async = [
  "aiofiles>=23.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
utils = ["static/*.html"]
